# services-aws-sqs

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/aws/: sqs.py
nagare/services/aws/: sqs.py
src/nagare/admin/aws/: sqs.py
src/nagare/services/aws/: sqs.py
