[metadata]
name = nagare-services-aws-sqs
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Amazon SQS service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-aws-sqs
    Tracker = https://github.com/nagareproject/services-aws-sqs/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services-aws

[options.entry_points]
nagare.commands =
    aws = nagare.admin.aws.sqs:Commands

nagare.commands.aws =
    receive = nagare.admin.aws.sqs:Receive
    send = nagare.admin.aws.sqs:Send

nagare.services =
    sqs = nagare.services.aws.sqs:SQS

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
